# esp-idf

./: .gitignore  README.md  commit_squash.sh  kconfig_check.sh  my_idf_refresh.sh  package.json  pio_fix.bat  reset_submodules2.sh  version.txt
.github/workflows/: release_zips.yml
components/esp-tls/: CMakeLists.txt  Kconfig  esp_tls.c  esp_tls.h  esp_tls_errors.h  esp_tls_mbedtls.c  esp_tls_wolfssl.c
components/esp-tls/esp-tls-crypto/: esp_tls_crypto.c
components/esp-tls/private_include/: esp_tls_private.h  esp_tls_wolfssl.h
components/esp_http_client/: esp_http_client.c
components/heap/: heap_caps_base.c
components/mbedtls/: CMakeLists.txt  Kconfig
components/mbedtls/esp_crt_bundle/: esp_crt_bundle.c
components/mbedtls/esp_crt_bundle/include/: esp_crt_bundle.h
components/tcp_transport/: transport_ssl.c
components/tcp_transport/include/: esp_transport_ssl.h
components/wolfssl/: CMakeLists.txt  Kconfig  README.md
components/wolfssl/include/: config.h  user_settings.h
components/wpa_supplicant/: CMakeLists.txt
components/wpa_supplicant/esp_supplicant/src/: esp_eap_client.c
components/wpa_supplicant/src/eap_peer/: eap.c
tools/: tools.json
tools/cmake/: build.cmake  component.cmake
